Changes in Service Component

--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/Icon-ecologistic.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ecomlogistics</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+
+  <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+  <script>
+    Weglot.initialize({
+      api_key: 'wg_2294a672ddc79f4b02df68fc3e7a87225'
+    });
+  </script>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/Icon-ecologistic.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ecomlogistics</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
